--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,46 @@
-<h1>
-    hello
-</h1>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>PredictionHomePage</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <div class= "login">
+            <h1> Boston House Prediction </h1>
+
+            <form action= "{{url_for('predict')}}" method="post">
+                <input type="text" name="CRIM" placeholder="CRIM" required="required"/><br>
+                <input type="text" name="ZN" placeholder="ZN" required="required"/><br>
+                <input type="text" name="INDUS" placeholder="INDUS" required="required"/><br>
+                <input type="text" name="CHAS" placeholder="CHAS" required="required"/><br>
+                <input type="text" name="NOX" placeholder="NOX" required="required"/><br>
+                <input type="text" name="RM" placeholder="RM" required="required"/><br>
+                <input type="text" name="Age" placeholder="Age" required="required"/><br>
+                <input type="text" name="DIS" placeholder="DIS" required="required"/><br>
+                <input type="text" name="RAD" placeholder="RAD" required="required"/><br>
+                <input type="text" name="TAX" placeholder="TAX" required="required"/><br>
+                <input type="text" name="PTRATIO" placeholder="PTRATIO" required="required"/><br>
+                <input type="text" name="B" placeholder="B" required="required"/><br>
+                <input type="text" name="LSTAT" placeholder="LSTAT" required="required"/><br>
+
+                <button type="submit" class="btn btm-primary btn-block btn-large">Predict</button>
+            </form>
+            <br>
+            <br>
+
+
+        </div>
+        {{prediction_text}}
+    </body>
+</html>
